--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -271,8 +271,11 @@ h1{
             background:rgba(230, 228, 214, 0.8);
             padding:20px;
              /* Smartphones (portrait) ----------- */
-            @media only screen and (max-width : 400px) {
+            @media only screen and (max-width : 320px) {
               margin-top: 100px;
+            }
+            @media only screen and (min-width: 321px) and (max-width : 568px) {
+              margin-top: 200px;
             }
 
         }
@@ -435,6 +438,7 @@ h1{
 #footer{
     background:$burg;
     color:$cream;
+    z-index: 1000;
     .tagline{
         padding-top:15px;
         font-weight: 600;
