--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -251,8 +251,14 @@ h1{
         }
     }
     &.frontpage{
-        background:url("assets/img/front-page-stock.png") no-repeat top;
+        //background:url("assets/img/front-page-stock.png") no-repeat top;
         background-size: 100% auto;
+        .frontpage_image{
+            z-index: 1;
+            img{
+                width:100%
+            }
+        }
         @media only screen and (max-width : 400px) {
             .row{
                 margin-left:-18px;
@@ -267,15 +273,17 @@ h1{
         }
 
         .page_content{
-            margin-top:400px;
+            //margin-top:400px;
+            margin-top: -200px;
             background:rgba(230, 228, 214, 0.8);
             padding:20px;
+            z-index: 2;
              /* Smartphones (portrait) ----------- */
             @media only screen and (max-width : 320px) {
-              margin-top: 100px;
+              //margin-top: 100px;
             }
             @media only screen and (min-width: 321px) and (max-width : 568px) {
-              margin-top: 200px;
+              //margin-top: 200px;
             }
 
         }
