--- a/style.css
+++ b/style.css
@@ -7287,31 +7287,29 @@ h1 {
         color: #dfdccb; }
   /* line 253, assets/sass/style.scss */
   #content.frontpage {
-    background: url("assets/img/front-page-stock.png") no-repeat top;
     background-size: 100% auto; }
+    /* line 256, assets/sass/style.scss */
+    #content.frontpage .frontpage_image {
+      z-index: 1; }
+      /* line 258, assets/sass/style.scss */
+      #content.frontpage .frontpage_image img {
+        width: 100%; }
     @media only screen and (max-width: 400px) {
-      /* line 257, assets/sass/style.scss */
+      /* line 263, assets/sass/style.scss */
       #content.frontpage .row {
         margin-left: -18px; } }
     @media only screen and (min-width: 900px) {
-      /* line 261, assets/sass/style.scss */
+      /* line 267, assets/sass/style.scss */
       #content.frontpage .nonmobile .row {
         margin-left: 0px; } }
-    /* line 269, assets/sass/style.scss */
+    /* line 275, assets/sass/style.scss */
     #content.frontpage .page_content {
-      margin-top: 400px;
+      margin-top: -200px;
       background: rgba(230, 228, 214, 0.8);
       padding: 20px;
+      z-index: 2;
       /* Smartphones (portrait) ----------- */ }
-      @media only screen and (max-width: 320px) {
-        /* line 269, assets/sass/style.scss */
-        #content.frontpage .page_content {
-          margin-top: 100px; } }
-      @media only screen and (min-width: 321px) and (max-width: 568px) {
-        /* line 269, assets/sass/style.scss */
-        #content.frontpage .page_content {
-          margin-top: 200px; } }
-    /* line 282, assets/sass/style.scss */
+    /* line 290, assets/sass/style.scss */
     #content.frontpage .seperator {
       padding: 20px;
       background: #52111d url("assets/img/burgarrow.png") no-repeat left center;
@@ -7321,12 +7319,12 @@ h1 {
       text-align: center;
       line-height: 27px; }
       @media only screen and (max-width: 400px) {
-        /* line 282, assets/sass/style.scss */
+        /* line 290, assets/sass/style.scss */
         #content.frontpage .seperator {
           padding: 42px;
           padding-bottom: 17px;
           padding-top: 12px; } }
-    /* line 296, assets/sass/style.scss */
+    /* line 304, assets/sass/style.scss */
     #content.frontpage .onhover {
       background: #dfdccb;
       color: #00878d;
@@ -7335,35 +7333,35 @@ h1 {
       height: 100%;
       display: block;
       position: relative; }
-      /* line 304, assets/sass/style.scss */
+      /* line 312, assets/sass/style.scss */
       #content.frontpage .onhover .hovering {
         height: 580px;
         background: #dfdccb; }
-        /* line 308, assets/sass/style.scss */
+        /* line 316, assets/sass/style.scss */
         #content.frontpage .onhover .hovering.row {
           margin-left: -15px; }
-        /* line 311, assets/sass/style.scss */
+        /* line 319, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .slide {
           height: 550px; }
-        /* line 317, assets/sass/style.scss */
+        /* line 325, assets/sass/style.scss */
         #content.frontpage .onhover .hovering header {
           margin: auto;
           margin-top: 5px;
           margin-bottom: 10px;
           text-align: center; }
-          /* line 323, assets/sass/style.scss */
+          /* line 331, assets/sass/style.scss */
           #content.frontpage .onhover .hovering header img:last-child {
             display: none; }
-        /* line 329, assets/sass/style.scss */
+        /* line 337, assets/sass/style.scss */
         #content.frontpage .onhover .hovering footer {
           margin-left: -14px;
           margin-right: -14px;
           display: none; }
-          /* line 337, assets/sass/style.scss */
+          /* line 345, assets/sass/style.scss */
           #content.frontpage .onhover .hovering footer .content1 {
             border-top: 2px solid #dfdccb;
             background: #52111d; }
-        /* line 342, assets/sass/style.scss */
+        /* line 350, assets/sass/style.scss */
         #content.frontpage .onhover .hovering article {
           font-weight: 600;
           line-height: 23px;
@@ -7371,15 +7369,15 @@ h1 {
           padding: 10px;
           color: #00878d;
           text-align: center; }
-        /* line 350, assets/sass/style.scss */
+        /* line 358, assets/sass/style.scss */
         #content.frontpage .onhover .hovering ul {
           list-style: none;
           padding-left: 0;
           margin-left: 0; }
-          /* line 354, assets/sass/style.scss */
+          /* line 362, assets/sass/style.scss */
           #content.frontpage .onhover .hovering ul li {
             border-bottom: thin solid #dfdccb; }
-            /* line 356, assets/sass/style.scss */
+            /* line 364, assets/sass/style.scss */
             #content.frontpage .onhover .hovering ul li a {
               color: #dfdccb;
               display: block;
@@ -7387,53 +7385,53 @@ h1 {
               font-weight: 400;
               text-transform: uppercase;
               padding: 25px; }
-              /* line 363, assets/sass/style.scss */
+              /* line 371, assets/sass/style.scss */
               #content.frontpage .onhover .hovering ul li a:hover {
                 text-decoration: none;
                 background: #00878d; }
-              /* line 367, assets/sass/style.scss */
+              /* line 375, assets/sass/style.scss */
               #content.frontpage .onhover .hovering ul li a i {
                 position: relative;
                 float: right;
                 font-size: 30px;
                 right: -22px; }
-        /* line 377, assets/sass/style.scss */
+        /* line 385, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .twoline i {
           top: -10px; }
-        /* line 382, assets/sass/style.scss */
+        /* line 390, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .threeline i {
           top: -20px; }
-        /* line 387, assets/sass/style.scss */
+        /* line 395, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .fourline i {
           top: -30px; }
-        /* line 391, assets/sass/style.scss */
+        /* line 399, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .bottom1 {
           padding-bottom: 36px; }
-        /* line 394, assets/sass/style.scss */
+        /* line 402, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .bottom2 {
           padding-bottom: 19px; }
-        /* line 397, assets/sass/style.scss */
+        /* line 405, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .bottom3 {
           padding-bottom: 36px; }
-        /* line 403, assets/sass/style.scss */
+        /* line 411, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .on .cont {
           background: #00878d; }
-          /* line 405, assets/sass/style.scss */
+          /* line 413, assets/sass/style.scss */
           #content.frontpage .onhover .hovering .on .cont article {
             color: #dfdccb !important; }
-          /* line 409, assets/sass/style.scss */
+          /* line 417, assets/sass/style.scss */
           #content.frontpage .onhover .hovering .on .cont .arrow {
             display: block; }
-        /* line 413, assets/sass/style.scss */
+        /* line 421, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .on footer {
           display: block; }
-        /* line 417, assets/sass/style.scss */
+        /* line 425, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .cont {
           margin-left: -14px;
           margin-right: -14px;
           padding-top: 26px;
           margin-top: -17px; }
-          /* line 422, assets/sass/style.scss */
+          /* line 430, assets/sass/style.scss */
           #content.frontpage .onhover .hovering .cont .arrow {
             display: none;
             position: absolute;
@@ -7443,30 +7441,30 @@ h1 {
             left: 38%;
             text-shadow: 0px 3px 0px #dfdccb; }
 
-/* line 438, assets/sass/style.scss */
+/* line 446, assets/sass/style.scss */
 #footer {
   background: #52111d;
   color: #dfdccb;
   z-index: 1000; }
-  /* line 442, assets/sass/style.scss */
+  /* line 450, assets/sass/style.scss */
   #footer .tagline {
     padding-top: 15px;
     font-weight: 600;
     font-size: 16px;
     text-transform: uppercase; }
-  /* line 448, assets/sass/style.scss */
+  /* line 456, assets/sass/style.scss */
   #footer img {
     float: left;
     display: inline; }
-  /* line 452, assets/sass/style.scss */
+  /* line 460, assets/sass/style.scss */
   #footer ul {
     float: left;
     padding-top: 15px;
     display: inline-block; }
-    /* line 458, assets/sass/style.scss */
+    /* line 466, assets/sass/style.scss */
     #footer ul li {
       display: inline-block; }
-      /* line 460, assets/sass/style.scss */
+      /* line 468, assets/sass/style.scss */
       #footer ul li a {
         color: #dfdccb;
         font-weight: 400; }
