--- a/style.css
+++ b/style.css
@@ -7266,50 +7266,54 @@ h1 {
     padding-left: 20px;
     margin-left: 5px; }
   /* line 232, assets/sass/style.scss */
+  #content .frontpage_image {
+    margin-left: 5px; }
+  /* line 235, assets/sass/style.scss */
   #content.page {
     background: url("assets/img/pagebg.png") repeat-x top; }
-    /* line 235, assets/sass/style.scss */
+    /* line 238, assets/sass/style.scss */
     #content.page .page_content {
       background: none;
       margin-top: 50px;
       padding-bottom: 50px; }
-    /* line 240, assets/sass/style.scss */
+    /* line 243, assets/sass/style.scss */
     #content.page h1 {
       font-weight: 800;
       text-transform: uppercase; }
-    /* line 244, assets/sass/style.scss */
+    /* line 247, assets/sass/style.scss */
     #content.page .breadcrumbs {
       color: #6c343f;
       margin-top: 15px;
       font-weight: 600; }
-      /* line 248, assets/sass/style.scss */
+      /* line 251, assets/sass/style.scss */
       #content.page .breadcrumbs a {
         color: #dfdccb; }
-  /* line 253, assets/sass/style.scss */
+  /* line 256, assets/sass/style.scss */
   #content.frontpage {
     background-size: 100% auto; }
-    /* line 256, assets/sass/style.scss */
+    /* line 259, assets/sass/style.scss */
     #content.frontpage .frontpage_image {
       z-index: 1; }
-      /* line 258, assets/sass/style.scss */
+      /* line 261, assets/sass/style.scss */
       #content.frontpage .frontpage_image img {
         width: 100%; }
     @media only screen and (max-width: 400px) {
-      /* line 263, assets/sass/style.scss */
+      /* line 266, assets/sass/style.scss */
       #content.frontpage .row {
         margin-left: -18px; } }
     @media only screen and (min-width: 900px) {
-      /* line 267, assets/sass/style.scss */
+      /* line 270, assets/sass/style.scss */
       #content.frontpage .nonmobile .row {
         margin-left: 0px; } }
-    /* line 275, assets/sass/style.scss */
+    /* line 278, assets/sass/style.scss */
     #content.frontpage .page_content {
-      margin-top: -200px;
+      margin-top: -236px;
       background: rgba(230, 228, 214, 0.8);
       padding: 20px;
       z-index: 2;
+      position: relative;
       /* Smartphones (portrait) ----------- */ }
-    /* line 290, assets/sass/style.scss */
+    /* line 294, assets/sass/style.scss */
     #content.frontpage .seperator {
       padding: 20px;
       background: #52111d url("assets/img/burgarrow.png") no-repeat left center;
@@ -7319,12 +7323,12 @@ h1 {
       text-align: center;
       line-height: 27px; }
       @media only screen and (max-width: 400px) {
-        /* line 290, assets/sass/style.scss */
+        /* line 294, assets/sass/style.scss */
         #content.frontpage .seperator {
           padding: 42px;
           padding-bottom: 17px;
           padding-top: 12px; } }
-    /* line 304, assets/sass/style.scss */
+    /* line 308, assets/sass/style.scss */
     #content.frontpage .onhover {
       background: #dfdccb;
       color: #00878d;
@@ -7333,35 +7337,35 @@ h1 {
       height: 100%;
       display: block;
       position: relative; }
-      /* line 312, assets/sass/style.scss */
+      /* line 316, assets/sass/style.scss */
       #content.frontpage .onhover .hovering {
         height: 580px;
         background: #dfdccb; }
-        /* line 316, assets/sass/style.scss */
+        /* line 320, assets/sass/style.scss */
         #content.frontpage .onhover .hovering.row {
           margin-left: -15px; }
-        /* line 319, assets/sass/style.scss */
+        /* line 323, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .slide {
           height: 550px; }
-        /* line 325, assets/sass/style.scss */
+        /* line 329, assets/sass/style.scss */
         #content.frontpage .onhover .hovering header {
           margin: auto;
           margin-top: 5px;
           margin-bottom: 10px;
           text-align: center; }
-          /* line 331, assets/sass/style.scss */
+          /* line 335, assets/sass/style.scss */
           #content.frontpage .onhover .hovering header img:last-child {
             display: none; }
-        /* line 337, assets/sass/style.scss */
+        /* line 341, assets/sass/style.scss */
         #content.frontpage .onhover .hovering footer {
           margin-left: -14px;
           margin-right: -14px;
           display: none; }
-          /* line 345, assets/sass/style.scss */
+          /* line 349, assets/sass/style.scss */
           #content.frontpage .onhover .hovering footer .content1 {
             border-top: 2px solid #dfdccb;
             background: #52111d; }
-        /* line 350, assets/sass/style.scss */
+        /* line 354, assets/sass/style.scss */
         #content.frontpage .onhover .hovering article {
           font-weight: 600;
           line-height: 23px;
@@ -7369,15 +7373,15 @@ h1 {
           padding: 10px;
           color: #00878d;
           text-align: center; }
-        /* line 358, assets/sass/style.scss */
+        /* line 362, assets/sass/style.scss */
         #content.frontpage .onhover .hovering ul {
           list-style: none;
           padding-left: 0;
           margin-left: 0; }
-          /* line 362, assets/sass/style.scss */
+          /* line 366, assets/sass/style.scss */
           #content.frontpage .onhover .hovering ul li {
             border-bottom: thin solid #dfdccb; }
-            /* line 364, assets/sass/style.scss */
+            /* line 368, assets/sass/style.scss */
             #content.frontpage .onhover .hovering ul li a {
               color: #dfdccb;
               display: block;
@@ -7385,53 +7389,53 @@ h1 {
               font-weight: 400;
               text-transform: uppercase;
               padding: 25px; }
-              /* line 371, assets/sass/style.scss */
+              /* line 375, assets/sass/style.scss */
               #content.frontpage .onhover .hovering ul li a:hover {
                 text-decoration: none;
                 background: #00878d; }
-              /* line 375, assets/sass/style.scss */
+              /* line 379, assets/sass/style.scss */
               #content.frontpage .onhover .hovering ul li a i {
                 position: relative;
                 float: right;
                 font-size: 30px;
                 right: -22px; }
-        /* line 385, assets/sass/style.scss */
+        /* line 389, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .twoline i {
           top: -10px; }
-        /* line 390, assets/sass/style.scss */
+        /* line 394, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .threeline i {
           top: -20px; }
-        /* line 395, assets/sass/style.scss */
+        /* line 399, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .fourline i {
           top: -30px; }
-        /* line 399, assets/sass/style.scss */
+        /* line 403, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .bottom1 {
-          padding-bottom: 36px; }
-        /* line 402, assets/sass/style.scss */
+          padding-bottom: 50px; }
+        /* line 406, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .bottom2 {
-          padding-bottom: 19px; }
-        /* line 405, assets/sass/style.scss */
+          padding-bottom: 50px; }
+        /* line 409, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .bottom3 {
-          padding-bottom: 36px; }
-        /* line 411, assets/sass/style.scss */
+          padding-bottom: 50px; }
+        /* line 415, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .on .cont {
           background: #00878d; }
-          /* line 413, assets/sass/style.scss */
+          /* line 417, assets/sass/style.scss */
           #content.frontpage .onhover .hovering .on .cont article {
             color: #dfdccb !important; }
-          /* line 417, assets/sass/style.scss */
+          /* line 421, assets/sass/style.scss */
           #content.frontpage .onhover .hovering .on .cont .arrow {
             display: block; }
-        /* line 421, assets/sass/style.scss */
+        /* line 425, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .on footer {
           display: block; }
-        /* line 425, assets/sass/style.scss */
+        /* line 429, assets/sass/style.scss */
         #content.frontpage .onhover .hovering .cont {
           margin-left: -14px;
           margin-right: -14px;
           padding-top: 26px;
           margin-top: -17px; }
-          /* line 430, assets/sass/style.scss */
+          /* line 434, assets/sass/style.scss */
           #content.frontpage .onhover .hovering .cont .arrow {
             display: none;
             position: absolute;
@@ -7441,30 +7445,30 @@ h1 {
             left: 38%;
             text-shadow: 0px 3px 0px #dfdccb; }
 
-/* line 446, assets/sass/style.scss */
+/* line 450, assets/sass/style.scss */
 #footer {
   background: #52111d;
   color: #dfdccb;
   z-index: 1000; }
-  /* line 450, assets/sass/style.scss */
+  /* line 454, assets/sass/style.scss */
   #footer .tagline {
     padding-top: 15px;
     font-weight: 600;
     font-size: 16px;
     text-transform: uppercase; }
-  /* line 456, assets/sass/style.scss */
+  /* line 460, assets/sass/style.scss */
   #footer img {
     float: left;
     display: inline; }
-  /* line 460, assets/sass/style.scss */
+  /* line 464, assets/sass/style.scss */
   #footer ul {
     float: left;
     padding-top: 15px;
     display: inline-block; }
-    /* line 466, assets/sass/style.scss */
+    /* line 470, assets/sass/style.scss */
     #footer ul li {
       display: inline-block; }
-      /* line 468, assets/sass/style.scss */
+      /* line 472, assets/sass/style.scss */
       #footer ul li a {
         color: #dfdccb;
         font-weight: 400; }
@@ -7800,3 +7804,158 @@ h1 {
         /* line 344, assets/sass/_partials/_mobile.scss */
         .sb-slidebar ul .top_drop.current-menu-parent ul li a {
           color: #dfdccb; }
+
+@font-face {
+  font-family: 'codropsicons';
+  src: url("assets/fonts/codropsicons/codropsicons.eot");
+  src: url("../fonts/codropsicons/codropsicons.eot?#iefix") format("embedded-opentype"), url("assets/fonts/codropsicons/codropsicons.woff") format("woff"), url("assets/fonts/codropsicons/codropsicons.ttf") format("truetype"), url("assets/fonts/codropsicons/codropsicons.svg#codropsicons") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+/* line 16, assets/sass/_partials/_actionplan.scss */
+#info.on {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  height: 100%;
+  width: 100%; }
+  /* line 24, assets/sass/_partials/_actionplan.scss */
+  #info.on .int {
+    padding: 20px;
+    background: #fff;
+    height: 80%;
+    width: 80%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    margin-top: -25%;
+    margin-left: -40%; }
+  /* line 35, assets/sass/_partials/_actionplan.scss */
+  #info.on .top ul {
+    list-style: none; }
+    /* line 37, assets/sass/_partials/_actionplan.scss */
+    #info.on .top ul li {
+      display: inline;
+      padding-left: 20px;
+      padding-right: 20px; }
+  /* line 43, assets/sass/_partials/_actionplan.scss */
+  #info.on .content {
+    overflow: scroll;
+    height: 95%; }
+
+/* line 52, assets/sass/_partials/_actionplan.scss */
+.actionplan {
+  position: relative;
+  /* General SVG and path styles */ }
+  /* line 54, assets/sass/_partials/_actionplan.scss */
+  .actionplan ul li {
+    padding: 10px; }
+  /* line 57, assets/sass/_partials/_actionplan.scss */
+  .actionplan label {
+    display: inline-block;
+    position: relative;
+    font-size: 2em;
+    padding: 0 0 0 80px;
+    vertical-align: top;
+    color: rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: color 0.3s; }
+  /* line 68, assets/sass/_partials/_actionplan.scss */
+  .actionplan input[type="checkbox"],
+  .actionplan input[type="radio"],
+  .actionplan label::before {
+    width: 50px;
+    height: 50px;
+    top: 50%;
+    left: 0;
+    margin-top: -25px;
+    position: absolute;
+    cursor: pointer; }
+  /* line 80, assets/sass/_partials/_actionplan.scss */
+  .actionplan input[type="checkbox"],
+  .actionplan input[type="radio"] {
+    opacity: 0;
+    display: inline-block;
+    vertical-align: middle;
+    z-index: 100; }
+  /* line 88, assets/sass/_partials/_actionplan.scss */
+  .actionplan label::before {
+    content: '';
+    border: 4px solid #fff;
+    transition: opacity 0.3s; }
+  /* line 93, assets/sass/_partials/_actionplan.scss */
+  .actionplan input[type="checkbox"]:checked + label,
+  .actionplan input[type="radio"]:checked + label {
+    color: #fff; }
+  /* line 98, assets/sass/_partials/_actionplan.scss */
+  .actionplan input[type="checkbox"]:checked + label::before,
+  .actionplan input[type="radio"]:checked + label::before {
+    opacity: 0.8; }
+  /* line 104, assets/sass/_partials/_actionplan.scss */
+  .actionplan ul {
+    list-style: none;
+    position: relative; }
+    /* line 107, assets/sass/_partials/_actionplan.scss */
+    .actionplan ul li {
+      position: relative; }
+  /* line 113, assets/sass/_partials/_actionplan.scss */
+  .actionplan svg {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 13px;
+    left: 15px;
+    pointer-events: none; }
+  /* line 124, assets/sass/_partials/_actionplan.scss */
+  .actionplan svg path {
+    stroke: #00878d;
+    stroke-width: 5px;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    fill: none; }
+  /* line 131, assets/sass/_partials/_actionplan.scss */
+  .actionplan .mcontent {
+    margin-left: 83px;
+    font-size: 20px;
+    font-weight: 600; }
+
+/* line 143, assets/sass/_partials/_actionplan.scss */
+#submit.btn:after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s; }
+/* line 151, assets/sass/_partials/_actionplan.scss */
+#submit.btn.btn-7 {
+  background: #00a7ad;
+  color: #ffffff;
+  border-radius: 7px;
+  box-shadow: 0 5px #00878d;
+  padding: 25px 60px 25px 90px; }
+/* line 158, assets/sass/_partials/_actionplan.scss */
+#submit.btn.btn-7a {
+  overflow: hidden; }
+  /* line 160, assets/sass/_partials/_actionplan.scss */
+  #submit.btn.btn-7a:before {
+    position: absolute;
+    left: 0;
+    width: 40%;
+    font-size: 160%;
+    line-height: 0.8;
+    color: #1fcfcb; }
+/* line 170, assets/sass/_partials/_actionplan.scss */
+#submit.btn.icon-list:before {
+  content: "\f0ca";
+  font-family: FontAwesome;
+  color: #00878d;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  position: relative;
+  -webkit-font-smoothing: antialiased; }
