--- a/assets/sass/_partials/_actionplan.scss
+++ b/assets/sass/_partials/_actionplan.scss
@@ -8,41 +8,114 @@
     font-weight: normal;
     font-style: normal;
 }
-
-
-
-        #info{
+    #info{
            // display: none;
-            &.on{
-                display:block;
-                position:fixed;
-                top:0;
-                left:0;
-                background:rgba(0,0,0,0.5);
-                height:100%;
-                width:100%;
-                .int{
-                    padding:20px;
-                    background:#fff;
-                    height:80%;
-                    width:80%;
-                    position: relative;
-                    top:50%;
-                    left:50%;
-                    margin-top:-25%;
-                    margin-left:-40%;
-                }
-                .top ul{
-                    list-style: none;
-                     li{
-                        display: inline;
-                        padding-left:20px;
-                        padding-right:20px;
+           .modal-dialog{
+                width:1000px;
+           }
+           .print{
+            background: none;
+            border:none;
+            color:#ccc;
+           }
+            header{
+                text-align: center;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                h1{
+                    font-size:30px;
+                    color:$dg;
+                    margin-bottom: 3px;
+                    .line{
+
+                        top: 20px;
+                        height: 2px;
+                        border: thin solid $lg;
+                        position: relative;
+                        margin-top: -5px;
+                        &.right{
+                            float:right;
+                        }
+                        &.left{
+                            float:left;
+                        }
+                        &.su{
+                              width: 200px;
+                        }
+                        &.emp{
+                            width:200px;
+                        }
+                        &.be{
+                            width:40px;
+                        }
+                        &.cut{ width:100px;
+
+                        }
+                        &.ctl { width:100px;
+
+                        }
+                        &.pv{ width:180px;
+
+                        }
+                        &.sc{ width:100px;
+
+                        }
+                        &.pi{ width:159px;
+
+                        }
                     }
                 }
+                h3{
+                    font-size: 14px;
+                    text-transform: capitalize;
+                    font-variant: small-caps;
+                    font-style: italic;
+                    padding-top: 0;
+                    margin-top: 0;
+                    color: #ccc;
+                }
+            }
+
+            nav {
+                margin-top: -42px;
+                ul{
+                    list-style: none;
+                    li{
+                        display: inline-block;
+                        &:before{
+                            content:'|';
+                        }
+                        &:first-child:before{
+                            content:'';
+                        }
+                        a{
+                            text-transform:lowercase;
+                            font-weight: 400;
+                        }
+                    }
+
+                }
+            }
+            article{
                 .content{
-                    overflow: scroll;
-                    height:95%;
+                    margin-left: 50px;
+                }
+                ul{
+                     list-style: none;
+                     padding-left: 0;
+                    li{
+                        color:$dg;
+                        font-size: 16px;
+                        padding:20px;
+                        &:nth-child(odd){
+                            background: #eeeeee;
+                            //color:$dg;
+                        }
+                         &:nth-child(even){
+                            //color:$dg;
+
+                        }
+                    }
                 }
             }
         }
@@ -51,56 +124,152 @@
 
         .actionplan {
             position: relative;
-            ul li {
-                padding:10px;
+            padding-top: 50px;
+
+            .fa.fa-chevron-down{
+                font-size: 50px;
+            }
+            .odd{
+                background:#bfbcaf;
+                &.row{
+                    padding-top: 20px;
+               padding-bottom: 20px;
+                }
+            }
+            .even{
+                background:$cream;
+                &.row{
+                        padding-top: 20px;
+               padding-bottom: 20px;
+                }
+            }
+            header{
+                text-align: center;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                h1{
+                    font-size:50px;
+                    .line{
+
+                        top: 20px;
+                        height: 2px;
+                        border: thin solid #bf9199;
+                        position: relative;
+                        margin-top: 10px;
+                        &.right{
+                            float:right;
+                        }
+                        &.left{
+                            float:left;
+                        }
+                        &.su{
+                              width: 300px;
+                        }
+                        &.emp{
+                            width:200px;
+                        }
+                        &.be{
+                            width:40px;
+                        }
+                        &.cut{ width:100px;
+
+                        }
+                        &.ctl { width:100px;
+
+                        }
+                        &.pv{ width:180px;
+
+                        }
+                        &.sc{ width:100px;
+
+                        }
+                        &.pi{ width:159px;
+
+                        }
+                    }
+                }
+                h3{
+                    font-size: 24px;
+                    text-transform: capitalize;
+                    font-variant: small-caps;
+                    font-style: italic;
+                    padding-top: 0;
+                    margin-top: 0;
+                    color: #bf9199;
+                }
+            }
+
+            ul {
+               padding-left: 0;
+               margin-left:-15px;
+               margin-right:-15px;
+
+                li {
+                    padding:20px;
+                    //height:100px;
+                    .question{
+                        float:right;
+                        //background:#d1cebe;
+                        //padding:10px;
+                        height:100%;
+                       // margin-top:-20px;
+                        i{
+                            font-size: 50px;
+                        }
+
+                    }
+                    .well{
+                        background:none;
+                        padding-bottom: 0;
+                        border:none;
+                    }
+                }
             }
           label {
-    display: inline-block;
-    position: relative;
-    font-size: 2em;
-    padding: 0 0 0 80px;
-    vertical-align: top;
-    color: rgba(0,0,0,0.2);
-    cursor: pointer;
-    transition: color 0.3s;
-}
+                display: inline-block;
+                position: relative;
+                font-size: 2em;
+                padding: 0 0 0 80px;
+                vertical-align: top;
+                color: rgba(0,0,0,0.2);
+                cursor: pointer;
+                transition: color 0.3s;
+                width:90%;
+            }
 
- input[type="checkbox"],
- input[type="radio"],
-label::before {
-    width: 50px;
-    height: 50px;
-    top: 50%;
-    left: 0;
-    margin-top: -25px;
-    position: absolute;
-    cursor: pointer;
-}
+            input[type="checkbox"],
+            input[type="radio"],
+            label:before {
+                width: 50px;
+                height: 50px;
+                top: 50%;
+                left: 0;
+                margin-top: -25px;
+                position: absolute;
+                cursor: pointer;
+            }
 
- input[type="checkbox"],
- input[type="radio"] {
-    opacity: 0;
-    display: inline-block;
-    vertical-align: middle;
-    z-index: 100;
-}
+            input[type="checkbox"],input[type="radio"] {
+                opacity: 0;
+                display: inline-block;
+                vertical-align: middle;
+                z-index: 100;
+            }
 
- label::before {
-    content: '';
-    border: 4px solid #fff;
-    transition: opacity 0.3s;
-}
-input[type="checkbox"]:checked + label,
- input[type="radio"]:checked + label {
-    color: #fff;
-}
+            label:before {
+                content: '';
+                border: 4px solid #fff;
+                transition: opacity 0.3s;
+            }
+            input[type="checkbox"]:checked + label,
+            input[type="radio"]:checked + label {
+                color: #fff;
+            }
 
-input[type="checkbox"]:checked + label::before,
-input[type="radio"]:checked + label::before {
-    opacity: 0.8;
-}
-
-
+            input[type="checkbox"]:checked + label::before,
+            input[type="radio"]:checked + label::before {
+                opacity: 0.8;
+            }
             ul{
                 list-style: none;
                 position:relative;
@@ -108,38 +277,33 @@ input[type="radio"]:checked + label::before {
                     position: relative;
                 }
             }
-            /* General SVG and path styles */
-
- svg {
-    position:absolute;
-    width: 40px;
-    height: 40px;
-   top: 13px;
-   left:15px;
-   // margin-top: -40px;
-    //left: 5px;
-    pointer-events: none;
-}
-
-svg path {
-    stroke: $dblue;
-    stroke-width: 5px;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    fill: none;
-}
-    .mcontent{
-        margin-left:83px;
-        font-size: 20px;
-        font-weight: 600;
-        //display: none;
-    }
-
-
-
+            svg {
+                position:absolute;
+                width: 40px;
+                height: 40px;
+                top: 13px;
+                left:15px;
+                // margin-top: -40px;
+                //left: 5px;
+                pointer-events: none;
+                path {
+                    stroke: $dblue;
+                    stroke-width: 5px;
+                    stroke-linecap: round;
+                    stroke-linejoin: round;
+                    fill: none;
+                }
+            }
+            .mcontent{
+                margin-left:83px;
+                font-size: 20px;
+                font-weight: 600;
+                //display: none;
+            }
         }
-
         #submit.btn{
+            margin:auto;
+            text-align: center;
             &:after{
                 content: '';
                 position: absolute;
@@ -152,34 +316,37 @@ svg path {
                 background: #00a7ad;
                 color: $w;
                 border-radius: 7px;
+                font-size: 20px;
                 box-shadow: 0 5px $dblue;
-                padding: 25px 60px 25px 90px;
+                padding: 9px 46px 12px 55px;
+                text-transform: uppercase;
+                &:active{
+                    background: $dblue;
+                    box-shadow: 0 5px $lblue;
+                }
             }
             &.btn-7a{
                 overflow: hidden;
                 &:before{
                     position: absolute;
-                left: 0;
-                width: 40%;
-                font-size: 160%;
-                line-height: 0.8;
-                color: $lblue;
+                    left: -28px;
+                    width: 40%;
+                    top:3px;
+                    font-size: 30px;
+                    line-height: 0.8;
+                    //color: $lblue !important;
                 }
-
             }
-            &.icon-list:before{
+            &.icon-truck:before{
                 content: "\f0ca";
                 font-family: FontAwesome;
                 color:$dblue;
-                speak: none;
-                font-style: normal;
-                font-weight: normal;
-                font-variant: normal;
-                text-transform: none;
                 line-height: 1;
                 position: relative;
-                -webkit-font-smoothing: antialiased;
-
+                  -webkit-font-smoothing: antialiased;
             }
-
+            &.icon-truck:active:before{
+                color: $lblue !important;
+            }
         }
+
